# PacmanGame

./: .clang-format  CMakeLists.txt  LICENSE  Main.qml  main.cpp
assets/: appIcon.rc  mazeMap.txt  objectsMap.txt
imports/: Floor.qml  Game.qml  Ghost.qml  Pacman.qml  PauseOverlay.qml  Pill.qml  Point.qml  Wall.qml
include/: gamecontroller.hpp  gameobject.hpp  ghost.hpp  pacman.hpp
src/: gamecontroller.cpp  gameobject.cpp  ghost.cpp  pacman.cpp
